[package]
name = "svc"
version = "0.1.0"
edition = "2021"

[features]
default = [ "ssr" ]
ssr     = [ "sycamore/ssr", "app/ssr" ]

[dependencies]
anyhow = { version = "1.0" }
tracing-subscriber = { version="0.3", features = ["env-filter"] }

axum       = { version = "0.6", default-features = false, features = ["tokio", "http1"] }
tower-http = { version = "0.4", features = ["fs"] }
indoc      = { version = "2.0" }
sycamore   = { version = "0.8" }
tokio      = { version = "1.22", default-features = false, features = ["macros", "rt"] }
tracing    = { version = "0.1.37" }

app = { path = "../app"}
